test/libhyperion/syntaxTests/events/event_library_function.hyp
library L {
	function f() public {
		int x = 1;
	}
}

contract C {
	event Test(function() external indexed);

	function g() public {
		Test(L.f);
	}
}

contract D {
	event Test(function() external);

	function f() public {
		Test(L.f);
	}
}

contract E {
	event Test(function() external indexed);

	using L for D;

	function k() public {
		Test(D.f);
	}
}
// ----
// TypeError 4888: (79-106): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
